# powermgr_powermgr_lite

./: README.en.md  README.md  README_zh.md  bundle.json  powermgr.gni
frameworks/: BUILD.gn
frameworks/include/: hilog_wrapper.h  power_manage_intf_define.h  running_lock_entry.h  running_lock_framework.h  running_lock_inner.h  running_lock_intf_define.h
frameworks/include/mini/: running_lock_interface.h
frameworks/include/small/: running_lock_interface.h
frameworks/src/: running_lock.c
frameworks/src/mini/: BUILD.gn  power_manage.c  running_lock_framework.c  running_lock_inner.c
frameworks/src/small/: BUILD.gn  power_manage.c  power_screen_saver.c  running_lock_framework.c  running_lock_inner.c
interfaces/innerkits/: power_manage.h
interfaces/kits/: running_lock.h
services/: BUILD.gn
services/include/: power_manage_feature.h  running_lock_feature.h  running_lock_handler.h  running_lock_mgr.h
services/include/small/: screen_saver_handler.h
services/source/: power_manage_service.cpp
services/src/: power_manage_feature.c  running_lock_feature.c  running_lock_mgr.c
services/src/mini/: BUILD.gn  running_lock_feature_impl.c  running_lock_handler.c
services/src/power/: auto_suspend.c  running_lock_hub.c
services/src/small/: BUILD.gn  running_lock_feature_impl.c  running_lock_handler.c  screen_saver_handler.cpp
test/Interface_test/: BUILD.gn
test/Interface_test/test/unittest/: BUILD.gn
test/Interface_test/test/unittest/src/: powermgr_interfaces_test.cpp
utils/: BUILD.gn
utils/src/: power_mgr_timer_util.c
(+12 files in other folders)
