# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/powermgr_lite/powermgr.gni")
import("//build/lite/config/test.gni")

unittest("powermgr_lite_test_interface") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/powermgr_test_lite"

  sources = [ "src/powermgr_interfaces_test.cpp" ]

  include_dirs = [
    "${powermgr_kits_path}",
    "${powermgr_innerkits_path}",
    "${powermgr_frameworks_path}/include",
  ]
  deps = [
    "${powermgr_frameworks_path}:powermgr",
    "//foundation/systemabilitymgr/samgr_lite/samgr:samgr",
  ]
  external_deps = [ "hilog_lite:hilog_shared" ]
}

group("unittest") {
  deps = [ ":powermgr_lite_test_interface" ]
}
